// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Snapshot Tests renders error state correctly 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1s32w64-MuiPaper-root"
>
  <div
    class="MuiBox-root css-dppiuw"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-15ah4i1-MuiSvgIcon-root"
        data-testid="InboxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2m0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19z"
        />
      </svg>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-10neesi-MuiTypography-root"
    >
      Connection Error
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body2 css-adbk1r-MuiTypography-root"
    >
      Could not connect to server
    </p>
  </div>
</div>
`;

exports[`EmptyState Snapshot Tests renders loading state correctly 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1s32w64-MuiPaper-root"
>
  <div
    class="MuiBox-root css-dppiuw"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-15ah4i1-MuiSvgIcon-root"
        data-testid="InboxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2m0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19z"
        />
      </svg>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-10neesi-MuiTypography-root"
    >
      Loading...
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body2 css-adbk1r-MuiTypography-root"
    >
      Fetching your data
    </p>
  </div>
</div>
`;

exports[`EmptyState Snapshot Tests renders no-data state correctly 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1s32w64-MuiPaper-root"
>
  <div
    class="MuiBox-root css-dppiuw"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-15ah4i1-MuiSvgIcon-root"
        data-testid="InboxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2m0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19z"
        />
      </svg>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-10neesi-MuiTypography-root"
    >
      No hands recorded yet
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body2 css-adbk1r-MuiTypography-root"
    >
      Start playing to see your stats here
    </p>
  </div>
</div>
`;

exports[`EmptyState Snapshot Tests renders with action button 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1s32w64-MuiPaper-root"
>
  <div
    class="MuiBox-root css-dppiuw"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-15ah4i1-MuiSvgIcon-root"
        data-testid="InboxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2m0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19z"
        />
      </svg>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-10neesi-MuiTypography-root"
    >
      Get Started
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body2 css-adbk1r-MuiTypography-root"
    >
      Begin your poker journey
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1p9xwda-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PlayArrowIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
      </span>
      Start Session
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
